# IOTDeviceSDK

./: LICENSE  README.md
platform-aliyun/ESP-IDF/: README.md
platform-aliyun/ESP-IDF/LinkSDK/: CMakeLists.txt  ChangeLog.md
platform-aliyun/ESP-IDF/LinkSDK/components/logpost/: aiot_logpost_api.h
platform-aliyun/ESP-IDF/LinkSDK/components/mqtt_upload/: aiot_mqtt_upload_api.c  aiot_mqtt_upload_api.h
platform-aliyun/ESP-IDF/LinkSDK/components/ota/: aiot_ota_api.c
platform-aliyun/ESP-IDF/LinkSDK/components/shadow/: aiot_shadow_api.h
platform-aliyun/ESP-IDF/LinkSDK/components/task/: aiot_task_api.c
platform-aliyun/ESP-IDF/LinkSDK/demos/: compress_basic_demo.c  cota_basic_demo.c  data_model_basic_demo.c  devinfo_posix_demo.c  fota_basic_demo.c  fota_multi_file_demo.c  fota_posix_demo.c  logpost_basic_demo.c  mota_basic_demo.c  mqtt_upload_basic_demo.c  mqtt_upload_single_file_demo.c  mqtt_upload_stream_send_demo.c  mqtt_upload_user_oss_demo.c  ntp_posix_demo.c  shadow_basic_demo.c  subdev_basic_demo.c  task_posix_demo.c
platform-aliyun/ESP-IDF/LinkSDK/portfiles/aiot_port/: posix_port.c
platform-fastbee/Arduino/FastBeeGateway/: Config.cpp  Mqtt.cpp
platform-fastbee/ESP-IDF/esp_fastbee_aliyun/: sdkconfig.old
platform-fastbee/ESP-IDF/esp_fastbee_aliyun/.devcontainer/: Dockerfile
platform-fastbee/ESP-IDF/fastbee/: README.md
platform-fastbee/ESP-IDF/fastbee/config/: README.md
platform-fastbee/ESP-IDF/fastbee/docs/: issue_template.md
platform-fastbee/ESP-IDF/fastbee/examples/awss/: README.md
platform-fastbee/openwrt/feeds/app/mqtt-wumei/: Makefile
(+6 files in other folders)
